--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <app-participants></app-participants>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
